--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
   "name": "md2redbook",
-  "version": "1.0.0",
-  "description": "小红书笔记卡片渲染工具 - Node.js 版本",
+  "version": "2.0.0",
+  "description": "小红书笔记素材创作工具 - 支持多种排版样式和智能分页",
   "main": "scripts/render_xhs.js",
   "scripts": {
-    "render": "node scripts/render_xhs.js"
-  },
-  "dependencies": {
-    "marked": "^11.0.0",
-    "js-yaml": "^4.1.0",
-    "playwright": "^1.40.0"
+    "render": "node scripts/render_xhs.js",
+    "install-browsers": "npx playwright install chromium"
   },
   "keywords": [
     "xiaohongshu",
     "markdown",
-    "image",
-    "card",
-    "generator"
+    "image-generation",
+    "social-media"
   ],
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "marked": "^11.0.0",
+    "yaml": "^2.3.0",
+    "playwright": "^1.40.0"
+  }
 }
